Finished my first ever website

--- a/index.html
+++ b/index.html
@@ -11,18 +11,49 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="hafe">
+    <section class="top-img">
+        <div class="hafe-width">
             <h1>Welcome To</h1>
-            <h1><span class="name">Mahin</span> Website</h1>
+            <h1><span class="name style">Mahin</span> Website</h1>
             <h3>World-class professional web dev</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolore eaque harum atque accusantium incidunt explicabo autem esse pariatur numquam et beatae, praesentium odio libero.</p>
             <a href="https://www.facebook.com/MR-খাজাবাবা-gemer-109747757982029/" class="button">Mahin</a>     
         </div>
-        <div class="hafe">
+        <div class="hafe-width">
             <img src="imges/jhankar.png" alt="">
         </div>
     </section>
+
+    <section class="dream-area">
+        <div class="hafe-width">
+            <img src="imges/jhankar2.png" alt="">
+        </div>
+        <div class="hafe-width">
+            <h2>Welcome To</h2>
+            <h3>Mahin Website</h3>
+            <h3>World-class professional web dev</h3>
+            <p>In this example, the image will float to the left in the paragraph, and the text in the paragraph will wrap around the image.</p>
+            <a href="https://www.facebook.com/MR-খাজাবাবা-gemer-109747757982029/" class="button">Mahin Khan</a>     
+        </div>
+    </section>
+
+    <section class="experiencs-area">
+        <h2>Experiencs</h2>
+        <div id="full" class="hafe-width singel-experiencs">
+            <h2>Welcome To</h2>
+            <h3 class="name style">World-class professional web dev</h3>
+            <p>In this example, the image will float to the left in the paragraph, and the text in the paragraph will wrap around the image.</p>
+        </div>
+        <div id="style" class="hafe-width singel-experiencs">
+            <h2>Mahin Website</h2>
+            <h3 class="name style">World-class professional web dev</h3>
+            <p>In this example, the image will float to the left in the paragraph, and the text in the paragraph will wrap around the image.</p>
+        </div>
+    </section>
+    <footer>
+        <p class="p">@ Mahin khan 2222  Website</p>
+    </footer>
+
     
 </body>
 </html>
